--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "eslint-config-next": "^13.4.9",
     "framer-motion": "^10.12.17",
     "next": "^13.4.9",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0"
   }
 }
